Thu Aug 16 21:08:18 EDT 2007 J Phelps <godless@users.sf.net>
	* instrument_edit.cpp(timer_callback): Reverted to SVN Revision
	101.
	* envelope_point_editor.cpp(update_position_list,paintEvent):
	Replaced duplicate code in update_position_list with a call to
	this->repaint(), which calls paintEvent. This avoids a recursive
	paintEvent caused by calling update_position_list() from a
	paintEvent (as was being done in Revision 102), but it does not
	improve performance: Qt4's performance is degraded at the level of
	its graphics primitives, to the point that drawing a vertical line
	that moves across the graph of the volume envelope now requires
	a high-end CPU, especially if you're drawing other things as well.
	* mdi_main_window.cpp: Style changes.
Tue Aug 14 00:13:24 EDT 2007 J Phelps <godless@users.sf.net>
	* instrument_edit.cpp(timer_callback): Made this function conform
	to Qt4's requirement that all painting take place within
	paintEvent calls. The new interface performs much more poorly
	than the old one, such that the difference can be seen with the
	naked eye.

	Volume loops don't seem to work anymore, either.
Mon Aug 13 21:18:55 EDT 2007 J Phelps <godless@users.sf.net>
	* mdi_main_window.cpp: Changed all occurences of
	action->addTo(menu) to menu->addAction(action).
	* mdi_main_window.cpp(newDoc): Added the (now required) call to
	ws->addWindow(w) which officially makes the new sub-window "w"
	a child of the QWorkspace object "ws". This revives most of the
	keyboard functionality that was lost with Revision 100.

	It is observed that the apparent lack of cursor-control
	in the Pattern Editor (F2) is caused by Qt4's refusal to
	perform paint operations outside of the context of a call by
	Qt to paintEvent(). Covering and uncovering the window will
	reveal all the cursor movement that has been going on in the
	interim. This means that a lot of widgets need to be heavily
	modified to conform.

	Each widget inherits a function called repaint() that causes an